# learn-pico

./: CMakeLists.txt  README.md  main.c
c/: CMakeLists.txt  measure.c
rust/: Cargo.toml
rust/src/: main.rs
